--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
         <meta name="theme-color" content="#000000" />
-        <title>upgamming</title>
+        <title>upgaming</title>
     </head>
     <body>
         <noscript>
